--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "angular": "^1.8.2",
+    "angular-route": "^1.8.2",
     "babel-loader": "^9.1.2",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
