--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --mode development",
+    "start": "webpack-dev-server --mode development",
     "test": "webpack"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@angular/router": "^0.2.0",
     "@babel/core": "^7.21.4",
     "@babel/preset-env": "^7.21.4",
     "angular": "^1.8.2",
+    "angular-resource": "^1.8.2",
     "angular-route": "^1.8.2",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
